# miky-bot

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: upload.yml
src/: main.py
src/cogs/: auth.py  user.py  utils.py
